# wizard

./: .gitignore  Cargo.toml  justfile
i18n/en/: wizard.ftl
i18n/pl/: wizard.ftl
i18n/sv/: wizard.ftl
res/: app.desktop  io.github.cosmicUtils.Wizard.desktop
src/: app.rs  main.rs  package.rs  packagekit.rs  zbus.rs
