[package]
name = "wizard"
version = "0.1.0"
edition = "2021"
description = "A Debian package installer for the COSMIC desktop"
license = "GPL-3.0-only"
authors = ["cosmic-utils"]

[dependencies]
futures-util = "0.3.30"
i18n-embed-fl = "0.9"
once_cell = "1.19.0"
open = "5.1.3"
rust-embed = "8.3.0"
tokio = { version = "1.37.0", features = ["full"] }
ashpd = { version = "0.9.1", features = ["wayland"] }
zbus = { version = "4.4.0", default-features = false, features = ["tokio"] }
zbus_polkit = { version = "4.0.0", features = ["tokio"] }
packagekit-zbus = "0.1.0"
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }

[dependencies.i18n-embed]
version = "0.15"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["dbus-config", "tokio", "winit", "wgpu"]

[package.metadata.deb]
license-file = "LICENSE"
assets = [
    ["target/release/wizard", "usr/bin/", "755"],
    ["res/*.desktop", "usr/share/applications/", "644"],
    ["res/icons/hicolor/scalable/apps/icon.svg", "usr/share/icons/hicolor/scalable/apps/io.github.cosmicUtils.Wizard.svg", "644"],
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
